# pJTAG

./: .gitignore  CMakeLists.txt  README.md  cmd.c  cmd.h  dirtyJtag.c  dirtyJtagConfig.h  glitch.pio  jtag.pio  pJTAG.c  pJTAGConfig.h  pio_jtag.c  pio_jtag.h  pw_mpc.txt  pw_spc.txt  run.py
